<resources>
    <string name="app_name">ChintuShop</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_product_found">No Product Found</string>
    <string name="no_customer_found">No Customer Found</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_zero_dollar">₹0.00</string>
    <string name="label_tax">Tax - 8%</string>
    <string name="label_total">Total Amount</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_card">Card</string>
    <string name="payment_type_paypal">Paypal</string>
    <string name="clear">Clear</string>
    <string name="checkout">Checkout</string>
    <string name="category">Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Image</string>
    <string name="qty">qty</string>
    <string name="delete">Delete</string>
    <string name="dialog_title">Title</string>
    <string name="no_item_found">No item found in the cart</string>
    <string name="customer_name">Customer Name</string>
</resources>
