<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="com.example.umesh.chintushop.ui.checkout.CheckoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingLeft="@dimen/margin_padding_tiny"
        android:paddingRight="@dimen/margin_padding_tiny">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/checkout_list_recyclerview"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"        />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/primary"
            android:text="@string/no_item_found"
            android:padding="@dimen/margin_padding_normal"
            android:gravity="center"
            android:textStyle="italic"
            android:visibility="gone"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sub_total"
                    android:layout_gravity="center"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/text_view_sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_zero_dollar"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:paddingRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tax"
                    android:layout_gravity="center"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/text_view_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_zero_dollar"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:paddingRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total"
                    android:layout_gravity="center"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/text_view_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_zero_dollar"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:paddingRight="5dp"/>

            </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="true"
            android:text="@string/payment_type_cash"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_card"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:checked="false"
            android:text="@string/payment_type_paypal"
            android:textAllCaps="true"/>

    </RadioGroup>

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_padding_tiny"
        android:layout_marginTop="@dimen/margin_padding_tiny">
        <Button
            android:id="@+id/clear_cart_button"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"/>

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"    />

        <Button
            android:id="@+id/checkout_cart_button"
            style="@style/BottomBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout"/>

    </LinearLayout>

</LinearLayout>
